# Trainer_RecognizeMedications

./: .editorconfig  .gitignore  README.md  Remote_Trainer_RecognizeMedications.ipynb  borrar.py  local_train_export_yolov8_model.ipynb  pyproject.toml  requirements_gpu.txt  requirements_gpu_pip.txt  train_export_yolov8_model.ipynb
